issue causing aligntment

--- a/assets/css/outputs.css
+++ b/assets/css/outputs.css
@@ -815,10 +815,6 @@ select {
   position: relative;
 }
 
-.sticky {
-  position: sticky;
-}
-
 .inset-0 {
   inset: 0px;
 }
@@ -960,10 +956,6 @@ select {
   margin-top: 2.5rem;
 }
 
-.mt-11 {
-  margin-top: 2.75rem;
-}
-
 .mt-16 {
   margin-top: 4rem;
 }
@@ -996,11 +988,26 @@ select {
   margin-top: 2rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mt-auto {
+  margin-top: auto;
+}
+
 .line-clamp-3 {
   overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
 
 .block {
@@ -1041,10 +1048,6 @@ select {
 
 .aspect-\[1155\/678\] {
   aspect-ratio: 1155/678;
-}
-
-.aspect-\[2\/1\] {
-  aspect-ratio: 2/1;
 }
 
 .aspect-\[4\/5\] {
@@ -1146,6 +1149,10 @@ select {
   width: 100vw;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -1184,6 +1191,10 @@ select {
 
 .flex-none {
   flex: none;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
 }
 
 .shrink {
@@ -1301,6 +1312,10 @@ select {
        column-gap: 2rem;
 }
 
+.gap-y-10 {
+  row-gap: 2.5rem;
+}
+
 .gap-y-16 {
   row-gap: 4rem;
 }
@@ -1319,10 +1334,6 @@ select {
 
 .gap-y-8 {
   row-gap: 2rem;
-}
-
-.gap-y-10 {
-  row-gap: 2.5rem;
 }
 
 .space-x-10 > :not([hidden]) ~ :not([hidden]) {
@@ -1443,26 +1454,12 @@ select {
   border-bottom-width: 1px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
 .border-t {
   border-top-width: 1px;
 }
 
 .border-gray-900\/10 {
   border-color: rgb(17 24 39 / 0.1);
-}
-
-.border-blue {
-  --tw-border-opacity: 1;
-  border-color: rgb(2 28 81 / var(--tw-border-opacity, 1));
-}
-
-.border-t-orange {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(255 120 73 / var(--tw-border-opacity, 1));
 }
 
 .bg-blue {
@@ -1554,11 +1551,6 @@ select {
 .bg-yellow {
   --tw-bg-opacity: 1;
   background-color: rgb(247 208 112 / var(--tw-bg-opacity, 1));
-}
-
-.bg-blue-light-blue {
-  --tw-bg-opacity: 1;
-  background-color: rgb(206 217 225 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gradient-to-b {
@@ -1741,12 +1733,12 @@ select {
   padding-top: 6rem;
 }
 
-.pt-5 {
-  padding-top: 1.25rem;
-}
-
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .text-left {
@@ -2026,6 +2018,14 @@ select {
   transition-duration: 150ms;
 }
 
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .\[mask-image\:radial-gradient\(100\%_100\%_at_top_right\2c white\2c transparent\)\] {
   -webkit-mask-image: radial-gradient(100% 100% at top right,white,transparent);
           mask-image: radial-gradient(100% 100% at top right,white,transparent);
@@ -2258,6 +2258,10 @@ h2.blog-subtitle  {
   color: rgb(247 208 112 / var(--tw-text-opacity, 1));
 }
 
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+
 .focus\:ring-2:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -2326,10 +2330,6 @@ h2.blog-subtitle  {
     grid-column: span 2 / span 2;
   }
 
-  .sm\:col-span-4 {
-    grid-column: span 4 / span 4;
-  }
-
   .sm\:col-start-1 {
     grid-column-start: 1;
   }
@@ -2357,10 +2357,6 @@ h2.blog-subtitle  {
     margin-right: 2.5rem;
   }
 
-  .sm\:mt-16 {
-    margin-top: 4rem;
-  }
-
   .sm\:mt-20 {
     margin-top: 5rem;
   }
@@ -2379,10 +2375,6 @@ h2.blog-subtitle  {
 
   .sm\:aspect-\[2\/1\] {
     aspect-ratio: 2/1;
-  }
-
-  .sm\:aspect-\[5\/2\] {
-    aspect-ratio: 5/2;
   }
 
   .sm\:aspect-square {
@@ -2560,20 +2552,12 @@ h2.blog-subtitle  {
     position: static;
   }
 
-  .lg\:left-1 {
-    left: 0.25rem;
+  .lg\:col-span-2 {
+    grid-column: span 2 / span 2;
   }
 
   .lg\:col-span-5 {
     grid-column: span 5 / span 5;
-  }
-
-  .lg\:col-span-7 {
-    grid-column: span 7 / span 7;
-  }
-
-  .lg\:col-span-2 {
-    grid-column: span 2 / span 2;
   }
 
   .lg\:mx-0 {
@@ -2653,18 +2637,9 @@ h2.blog-subtitle  {
     gap: 2rem;
   }
 
-  .lg\:gap-2 {
-    gap: 0.5rem;
-  }
-
   .lg\:gap-x-12 {
     -moz-column-gap: 3rem;
          column-gap: 3rem;
-  }
-
-  .lg\:gap-x-8 {
-    -moz-column-gap: 2rem;
-         column-gap: 2rem;
   }
 
   .lg\:gap-x-2 {
@@ -2672,9 +2647,9 @@ h2.blog-subtitle  {
          column-gap: 0.5rem;
   }
 
-  .lg\:gap-x-10 {
-    -moz-column-gap: 2.5rem;
-         column-gap: 2.5rem;
+  .lg\:gap-x-8 {
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
 
   .lg\:text-balance {
